<resources>
    <string name="app_name">Cucumber</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forget_paswd">Did you forget password?</string>
    <string name="sign_in">Sign in</string>
    <string name="skip_sing_in">Skip</string>
    <string name="wrong_email">Wrong email address</string>
    <string name="to_short_paswd">Password should has at least 6 characters</string>
    <string name="required_field">This field is required</string>
</resources>
